Added VERY BASIC staff managing for challenges

--- a/bit_battles/templates/challenges/edit_challenge.html
+++ b/bit_battles/templates/challenges/edit_challenge.html
@@ -11,7 +11,7 @@
         <input type="hidden" name="input-data" id="inputData" value="{{ challenge.inputs }}">
         <input type="hidden" name="output-data" id="outputData" value="">
 
-        <input type="text" name="name" placeholder="Challenge name">
+        <input type="text" name="name" placeholder="Challenge name" value="{{ challenge.name }}">
 
         <div class="truthtable" id="truthtable">
             <div class="add-column">
