--- a/bit_battles/templates/components/navbar.html
+++ b/bit_battles/templates/components/navbar.html
@@ -2,6 +2,6 @@
     <a{% if request.path == "/app/editor" %} class="active"{% endif %} href="/app/editor">[ Editor ]</a>
     <a{% if request.path == "/app/daily" %} class="active"{% endif %} href="/app/daily">[ Daily ]</a>
     <a{% if request.path == "/app/battles" %} class="active"{% endif %} href="/app/battles">[ Battles ]</a>
-    <a{% if request.path == "/app/challenges" %} class="active"{% endif %} href="#">[ Challenges ]</a>
+    <a{% if request.path == "/app/challenges" %} class="active"{% endif %} href="/app/challenges">[ Challenges ]</a>
     <a{% if "/app/user/" in request.path and not "/challenges" in request.path %} class="active"{% endif %} href="/app/user/{{ current_user.username }}">[ Profile ]</a>
 </nav>
