--- a/bit_battles/templates/components/embed.html
+++ b/bit_battles/templates/components/embed.html
@@ -12,5 +12,5 @@
 <meta name="twitter:description" content="Challenge yourself with logic puzzles and compete in truth table battles. Perfect your circuit design skills with BitBattles!">
 <meta name="twitter:image" content="https://www.bitbattles.xyz/static/images/card.png">
 
-<link rel="canonical" href="https://www.bitbattles.xyz">
+<link rel="canonical" href="https://www.bitbattles.xyz{{ request.path }}">
 <link rel="icon" href="/static/images/favicon.ico">
