--- a/bit_battles/templates/battles/battle.html
+++ b/bit_battles/templates/battles/battle.html
@@ -45,6 +45,10 @@
     </div>
 
     <div class="stage" id="battle">
+        <div class="countdown" id="countdown"></div>
+    </div>
+
+    <div class="stage" id="start-battle">
         <div class="toolbar">
             <button onclick="debugMode()">🖐</button>
             <button onclick="editMode()">🔧</button>
