--- a/bit_battles/templates/challenges/challenge_moderation.html
+++ b/bit_battles/templates/challenges/challenge_moderation.html
@@ -11,12 +11,12 @@
         
         <div class="setting">
             <b>Rating</b>
-            <select name="inputs">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+            <select name="rating">
+                <option value="1"{% if challenge.rating == 1%} selected{% endif %}>1</option>
+                <option value="2"{% if challenge.rating == 2%} selected{% endif %}>2</option>
+                <option value="3"{% if challenge.rating == 3%} selected{% endif %}>3</option>
+                <option value="4"{% if challenge.rating == 4%} selected{% endif %}>4</option>
+                <option value="5"{% if challenge.rating == 5%} selected{% endif %}>5</option>
             </select>
         </div>
 
