Added copy battle ID

--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -47,6 +47,10 @@ body {
     text-align: center;
 }
 
+.queue a.copy {
+    cursor: pointer;
+}
+
 .countdown {
     display: flex;
     align-items: center;
