Added player circuits

--- a/bit_battles/static/css/game.css
+++ b/bit_battles/static/css/game.css
@@ -76,6 +76,7 @@ body {
 
 .result-contents .player {
     margin: 15px 0px;
+    cursor: pointer;
 }
 .result-contents .player.you {
     margin: 0px -15px;
