--- a/bit_battles/static/css/user.css
+++ b/bit_battles/static/css/user.css
@@ -18,22 +18,25 @@
     align-items: center;
 }
 
-details,
-summary h4 {
-    display: inline-block;
-    margin: 0px;
+.battle-type {
+    width: 450px;
+}
+
+h4 {
+    margin-bottom: 0px;
 }
 
 details {
-    width: 450px;
-    margin: 20px;
+    width: 100%;
+}
+
+summary div {
+    display: inline-block;
+    margin: 5px;
+    cursor: pointer;
 }
 
 .battle.statistic {
-    margin: 5px 0px 15px 0px;
-}
-
-.battle {
     display: flex;
 }
 .battle span {
