Available random battles

--- a/bit_battles/templates/battles/battles.html
+++ b/bit_battles/templates/battles/battles.html
@@ -43,7 +43,7 @@
                     <input type="text" name="battle_id" maxlength="5" placeholder="battle">
                     <button type="submit">Join</button>
                 </form>
-                <button class="action" onclick="window.location.href='/app/battle/random/'">Join random battle</button>
+                <button class="action" onclick="window.location.href='/app/battle/random/'">Random battle ({{ battles }})</button>
             </div>
         </div>
 
